--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -44,3 +44,12 @@
 .margin-top-none{
   margin-top: 0px;
 }
+.v-flex-conainer-low{
+  padding-right: 20px;
+}
+.v-flex-conainer-med{
+  max-width: 250px;
+}
+.container-data-public{
+  margin-bottom: 20px;
+}
